--- a/requirements.txt
+++ b/requirements.txt
@@ -10,3 +10,7 @@ SQLAlchemy==2.0.32
 typing_extensions==4.12.2
 Werkzeug==3.0.3
 zipp==3.20.0
+google-generativeai==0.7.2
+SpeechRecognition==3.8.1
+pyttsx3==2.90
+
